# vcpkg-rs

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  azure-pipelines.yml  notes.md  todo.md
.appveyor/: appveyor.bat
.github/workflows/: ci.yml  linux.yml  macos.yml  rust-1.10.yml  rust-1.12.yml  rust-1.17.yml  wasm.yml  windows.yml
_build/: common-tests.yml  install-rust.yml  install-vcpkg.yml
cargo-vcpkg/: CHANGELOG.md  Cargo.toml  README.md
cargo-vcpkg/src/: main.rs
src/: lib.rs
systest/: Cargo.toml  run.sh  test.cmd
systest/src/: main.rs
test-data/normalized/installed/vcpkg/updates/: status
tests/: run.sh  vcpkgrs_target.sh  wasm.sh
tests/harfbuzz/: Cargo.toml  build.rs
tests/harfbuzz/src/: lib.rs  main.rs  test.c
tests/top-level/: Cargo.toml  vcpkg.json
tests/top-level/src/: main.rs
vcpkg/: Cargo.toml
vcpkg/src/: lib.rs
vcpkg_cli/: Cargo.toml
vcpkg_cli/src/: main.rs
wstest/: Cargo.toml  run.sh
wstest/foo/: Cargo.toml
wstest/wstest/: Cargo.toml  README.md  build.rs
wstest/wstest/.cargo/: config
