[package]
name = "cargo-vcpkg"
version = "0.1.0"
authors = ["Jim McGrath <jimmc2@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
cargo_metadata = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"
structopt = "0.3"
termcolor = "1.1.0"
vcpkg = { path = "../vcpkg" }