[package]
name = "systest"
version = "0.1.0"
authors = ["Jim McGrath <jimmc2@gmail.com>"]

[features]
extras=["zmq-sys"]

[dependencies]
# using * for the dependency version is appropriate here since
# the purpose of this project is to fail in CI if the latest
# versions do not build
curl = "*"
libz-sys = "*"
openssl-sys = "*"
zmq-sys = { git = "https://github.com/mcgoo/rust-zmq", branch = "vcpkg", optional=true }

# always test against the vcpkg crate in this repo
[patch.crates-io]
vcpkg = { path = '../vcpkg' }

[patch.'https://github.com/mcgoo/vcpkg-rs']
vcpkg = { path = '../vcpkg' }
