[package]
name = "vcpkg"
version = "0.1.5"
authors = ["Jim McGrath <jimmc2@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/mcgoo/vcpkg-rs"
documentation = "https://docs.rs/vcpkg"
description = """
A library to find native dependencies in a vcpkg tree at build
time in order to be used in Cargo build scripts.
"""
keywords = ["build-dependencies"]

[badges]
travis-ci = { repository = "mcgoo/vcpkg-rs" }
appveyor = { repository = "mcgoo/vcpkg-rs" }

[dependencies]
