[package]
name = "vcpkg_cli"
version = "0.2.3"
authors = ["Jim McGrath <jimmc2@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/mcgoo/vcpkg-rs"
documentation = "https://docs.rs/vcpkg"
description = """
A command line utility to investigate which libraries will be
found by the vcpkg Cargo build helper.
"""
keywords = ["build-dependencies"]

[badges]
travis-ci = { repository = "mcgoo/vcpkg-rs", branch = "master" }
appveyor = { repository = "mcgoo/vcpkg-rs", branch = "master", service="github" }

[dependencies]
vcpkg = { version = "0.2.6", path = "../vcpkg" }
clap = "2.31"
