[package]
name = "wstest"
version = "0.1.0"
authors = ["Jim McGrath <jimmc2@gmail.com>"]
edition = "2018"

[build-dependencies]
vcpkg = { version = "0.2.8" }

[dependencies]
foo = { path = "../foo" }

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "4c1db68"

[package.metadata.vcpkg.target]
x86_64-apple-darwin = { install = ["sdl2"] }
x86_64-unknown-linux-gnu = { install = ["sdl2"] }
x86_64-pc-windows-msvc = { triplet = "x64-windows", install = ["sdl2"] }
